#
# some news ... see also TODO for hints
#


2021-05-14 -> ## amtrack stuff
              add skeleton

              ## repo stuff
	      some documentation adds/changes/fixes/improvements
	      add amtrack folder


2021-05-13 -> ## target stuff
	      add agetty.tty7/8 and activte them
	      activate rsyslog and add config for tty11 and tty12
	      copy lcd/sensor_daemon runit scripts to /etc/sv

              ## repo stuff
	      some documentation adds/changes/fixes/improvements

	      ## lcd2004_i2c stuff
	      add error handling
	      add first parts of fifo handling
	      add thread for fifo handling

              ## libhelper stuff
	      add first parts of fifo handling

              ## sensor_pi stuff
	      add run script

2021-05-12 -> ## repo stuff
	      add folder etc with ruint service definitions
	      some documentation adds/changes/fixes/improvements

              ## libhelper stuff
	      add some more functions

              ## lcd2004_i2c stuff
	      finalize daemon handling

2021-05-11 -> ## repo stuff
	      add libhelper which provides common functions
	      remove dependency to libbaalue
	      some documentation adds/changes/fixes/improvements

              ## libhelper stuff
              add skeleton for libhelper
	      add some first functions

              ## lcd2004_i2c stuff
	      add usage of libhelper (static lib!)
	      add kdo argument handling

	      ## sensor_pi stuff
	      add usage of libhelper

2021-05-10 -> ## repo stuff
	      add external folder to clone dependencies like libbalue
	      add env file to include in /etc/profile.d on the target
              some documentation adds/changes/fixes/improvements
              smaller script change
	      smaller Makefile changes/adds/cleanups
	      update kernel config

	      ## target stuff
	      add gpm and raspi folders
	      add pi-env_env.sh to /etc/profile.de
	      add man-pages
	      update kernel to 5.10.35

	      ## lcd2004_i2c stuff